--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     @include('partials/header.html')
     <main class="main">
       @include('partials/main.html')
+      @include('partials/game-zone.html')
     </main>
     <!-- @include('partials/footer.html') -->
   </div>
