feat: new function

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <main class="main">
       @include('partials/main.html')
       @include('partials/game-zone.html')
+      @include('partials/game-setting.html')
     </main>
     <!-- @include('partials/footer.html') -->
   </div>
